--- a/ARMSOC_1/Software/mycm0code.uvprojx
+++ b/ARMSOC_1/Software/mycm0code.uvprojx
@@ -82,7 +82,7 @@
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>1</RunUserProg2>
             <UserProg1Name>fromelf -cvf Objects\mycm0code.axf -o disasm.txt --vhx --16x1 -o mycm0code.hex</UserProg1Name>
-            <UserProg2Name>monta.bat</UserProg2Name>
+            <UserProg2Name>fromelf -cvf Objects\mycm0code.axf -o disasm.txt --vhx --32x1 -o mycm0code32.hex</UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
             <nStopA1X>0</nStopA1X>
@@ -132,12 +132,12 @@
             <UseExternalTool>0</UseExternalTool>
             <RunIndependent>0</RunIndependent>
             <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
-            <Capability>0</Capability>
-            <DriverSelection>-1</DriverSelection>
+            <Capability>1</Capability>
+            <DriverSelection>4096</DriverSelection>
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3></Flash3>
+          <Flash3>"" ()</Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
